# project2

./: .gitignore  README.md  pyproject.toml
.github/workflows/: csh_ci.yml
src/communities/: choices.py  forms.py  models.py  urls.py
src/communities/migrations/: 0001_initial.py  0002_building_manager.py  0002_building_manager_id.py  0003_rename_manager_id_building_manager.py  0004_alter_building_manager.py
src/communities/templates/communities/: building_create.html  building_detail.html  building_list.html
src/communities/views/: __init__.py  building_create.py  building_detail.py  building_download.py  building_list.py  building_update.py
src/communities/views/residents/: __init__.py  resident_delete.py  resident_list.py
src/core/: base.py  consts.py  middleware.py  settings.py  urls.py
src/dashboards/: filters.py  urls.py
src/dashboards/views/: __init__.py  dashboard_administrator.py  dashboard_resident.py
src/issues/: admin.py  filters.py  forms.py  models.py  urls.py
src/issues/migrations/: 0001_initial.py  0002_issue_photo_alter_issue_place_alter_issue_severity_and_more.py  0002_remove_issue_update_info_comment.py  0003_alter_issue_status.py
src/issues/templates/issues/: issue_detail.html  (+2 more)
src/issues/views/: __init__.py  issue_close.py  issue_detail.py  issue_list.py  issue_report.py
src/landing/: apps.py
src/landing/templatetags/: auth_extras.py
src/landing/views/: index.py
src/static/: custom.css  default.css
src/users/: admin.py  forms.py  models.py  signals.py  urls.py
src/users/migrations/: 0001_initial.py  0002_alter_customuser_building_custominvitation.py  0002_custominvitation.py  0003_alter_customuser_building.py  0004_custominvitation_group.py  0005_alter_custominvitation_building.py  0005_customuser_phone_number.py
src/users/views/: __init__.py  invite_accept.py  invite_send.py  login.py  logout.py  registration.py
(+18 files in other folders)
