[tool.poetry]
name = "project2"
version = "0.1.0"
description = "An application for apartment building residents to report issues by scanning a QR code."
authors = ["Klaudia Ryciuk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.7"
django-environ = "^0.11.2"
psycopg2 = "^2.9.9"
django-crispy-forms = "^2.3"
crispy-bootstrap5 = "^2024.2"
django-invitations = "^2.1.0"
django-allauth = "^64.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.5.7"
safety = "^3.2.5"
bandit = "^1.7.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
