[tool.poetry]
name = "project2"
version = "0.1.0"
description = "An application for apartment building residents to report issues by scanning a QR code."
authors = ["Klaudia Ryciuk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.7"
django-environ = "^0.11.2"
psycopg2 = "^2.9.9"
django-crispy-forms = "^2.3"
crispy-bootstrap5 = "^2024.2"
django-invitations = "^2.1.0"
django-allauth = "^64.0.0"
django-qr-code = "^4.1.0"
qrcode = "^7.4.2"
pillow = "^10.4.0"
django-filter = "^24.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.5.7"
safety = "^3.2.5"
bandit = "^1.7.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
